# powr-browsing-history-analysis

./: README.md  main.ipynb  main.py  pyproject.toml
dataset/: py_demo_client_extension_30_20250221075805(in).csv
output/: cleaned_browsing_data.csv  powerbi_category_summary.csv  powerbi_domain_summary.csv  powerbi_time_summary.csv
